--- a/pos_retail/static/description/index.html
+++ b/pos_retail/static/description/index.html
@@ -121,6 +121,37 @@
     </div>
 </section>
 
+
+<section class="panel-heading">
+    <div class="oe_row oe_spaced alert alert-info" style="padding:8px;font-weight: 200; font-size: 20px; color: black">
+        <h2 class="oe_slogan">Cash control</h2>
+        <div class="oe_span12">
+            <ul>
+                <li>Allow cashier admin take money out, put money in, close balance</li>
+                <li>Allow cashier can End of session, Validate Closing & Posting Entries</li>
+            </ul>
+        </div>
+        <div class="oe_span12">
+            <img class="oe_picture oe_screenshot" src="cash_control1.png" style="width: 100%; margin-bottom: 18px; border: 1px solid lightslategray"/>
+        </div>
+        <div class="oe_span12">
+            <img class="oe_picture oe_screenshot" src="cash_control2.png" style="width: 100%; margin-bottom: 18px; border: 1px solid lightslategray"/>
+        </div>
+        <div class="oe_span12">
+            <img class="oe_picture oe_screenshot" src="cash_control3.png" style="width: 100%; margin-bottom: 18px; border: 1px solid lightslategray"/>
+        </div>
+        <div class="oe_span12">
+            <img class="oe_picture oe_screenshot" src="cash_control4.png" style="width: 100%; margin-bottom: 18px; border: 1px solid lightslategray"/>
+        </div>
+        <div class="oe_span12">
+            <img class="oe_picture oe_screenshot" src="cash_control5.png" style="width: 100%; margin-bottom: 18px; border: 1px solid lightslategray"/>
+        </div>
+        <div class="oe_span12">
+            <img class="oe_picture oe_screenshot" src="cash_control6.png" style="width: 100%; margin-bottom: 18px; border: 1px solid lightslategray"/>
+        </div>
+    </div>
+</section>
+
 <section class="panel-heading">
     <div class="oe_row oe_spaced alert alert-info" style="padding:8px;font-weight: 200; font-size: 20px; color: black">
         <h2 class="oe_slogan">Nothing pos orders loss</h2>
