--- a/pos_retail/static/description/index.html
+++ b/pos_retail/static/description/index.html
@@ -97,6 +97,15 @@
     </div>
 </div>
 
+<section class="panel-heading">
+    <div class="oe_row oe_spaced alert alert-info" style="padding:8px;font-weight: 200; font-size: 20px; color: black">
+        <h2 class="oe_slogan">WE HAVE SERVER SAAS (BY @yelizariev) FOR DEMO BEFORE PURCHASE</h2>
+        <div class="oe_span12">
+            <img class="oe_picture oe_screenshot" src="demo.png" style="width: 100%; margin-bottom: 18px; border: 1px solid lightslategray"/>
+        </div>
+    </div>
+</section>
+
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan" style="color:#875A7B;">Report analytic</h2>
@@ -238,14 +247,10 @@
         <h2 class="oe_slogan">Big data</h2>
         <div class="oe_span12">
             <ul>
-                <li>Help cashier fast to open/reopen pos session (without loading times)</li>
-                <li>Load cache (checked) = active fast loading pos</li>
-                <li>Remove cache button: Clean pos database and reinstall when restart pos session</li>
-                <li>Refresh cache button: Re-store pos database</li>
-                <li>Cache tables: products, customers, invoices, sale orders, pos orders, pricelist</li>
-                <li>Cache stock on hand each locations</li>
                 <li>The original Odoo POS is very slow if you have a large number of products, which is very time-consuming and
             unproductive.</li>
+                <li>Help cashiers fast open/reopen pos session (without loading times)</li>
+                <li>Remove cache button: Clean pos database and reinstall</li>
                 <li>With this module installed, your system will benefit from incredible loading speed of
             100,000 - 200,000 products in a few seconds even in low internet connection.</li>
                 <li>It also scalable if you have a large number of orders and customers.</li>
@@ -1028,15 +1033,6 @@
         <div class="oe_screenshot" style="text-align: center;">
             <img style="max-width: 100%" src="signature_order_and_receipt.png"/>
         </div>
-    </div>
-</section>
-
-<section class="oe_container">
-    <div>
-        <h2 class="oe_slogan" style="color:#875A7B;">POS orders screen</h2>
-    </div>
-    <div class="oe_spaced" style="padding-left: 64px; padding-right: 64px; font-size: 18px;">
-        <img src="pos_orders_screen.png" style="width: 100%; margin-bottom: 18px; border: 1px solid lightslategray">
     </div>
 </section>
 
